--- a/Epicture/app/src/main/AndroidManifest.xml
+++ b/Epicture/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
                 <data android:scheme="epicture" android:host="callback" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginDisplay"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 
